objects/Account.object
<CustomObject>
    <fields>
        <fullName>Number_of_Full_Time_Employees__c</fullName>
        <label>Number of Full Time Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Opportunity_Reservables__c</fullName>
        <description>Roll up summary of all Opportunities Reservables underneath an Account</description>
        <label>Number of Opportunity Reservables</label>
        <summarizedField>Opportunity.Total_Desks_Reserved__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Org_Id__c</fullName>
        <description>This field will contain the ultimate parent for the account</description>
        <label>Org Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Identification_Status__c</fullName>
        <defaultValue>"Pending"</defaultValue>
        <description>This field will tell us whether record is processed by Scheduled Batch or not.</description>
        <inlineHelpText>If account is not processed by batch then status will be "Pending",
If account is processed by batch then status will be "Processed"</inlineHelpText>
        <label>Org Identification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Org_Name__c</fullName>
        <description>This field is used to store parent name without prefix which will be used for Account Naming Convention using apex trigger.</description>
        <inlineHelpText>This field is used to stores parent account name without prefix.</inlineHelpText>
        <label>Org Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Assigned_On__c</fullName>
        <description>Field will keep with the owner assigned date.</description>
        <label>Owner Assigned On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner_Profile__c</fullName>
        <formula>Owner.Profile.Name</formula>
        <label>Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Sales_Function__c</fullName>
        <description>Displays Account Owner's Sales Function</description>
        <formula>TEXT(Owner.Sales_Role__c)</formula>
        <label>Owner Sales Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <formula>CASESAFEID(ParentId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account(Pipeline Reporting)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Org_Id__c</fullName>
        <description>Shows the ID of the Ultimate Org when we have the multi-level hierarchy.</description>
        <formula>IF(ISBLANK(Parent.Id), null, IF(ISBLANK(Parent.Parent.Id), Parent.Id,IF(ISBLANK(Parent.Parent.Parent.Id), Parent.Parent.Id,IF(ISBLANK(Parent.Parent.Parent.Parent.Id), Parent.Parent.Parent.Id,IF(ISBLANK(Parent.Parent.Parent.Parent.Parent.Id), Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Parent.Id)))))</formula>
        <inlineHelpText>Shows the ID of the Ultimate Org when we have the multi-level hierarchy.</inlineHelpText>
        <label>Parent Org Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Org_Name__c</fullName>
        <description>Shows the name of the Ultimate Org when we have the multi-level hierarchy.</description>
        <formula>IF( OR( ISPICKVAL(Account_Type__c, 'Org'),ISBLANK(Parent.Id)),Name,IF(OR(ISPICKVAL(Parent.Account_Type__c, 'Org'),ISBLANK(Parent.Parent.Id)),Parent.Name,IF(OR(ISPICKVAL(Parent.Parent.Account_Type__c, 'Org'),ISBLANK(Parent.Parent.Parent.Id)), Parent.Parent.Name,IF(OR(ISPICKVAL(Parent.Parent.Parent.Account_Type__c, 'Org'),ISBLANK(Parent.Parent.Parent.Parent.Id)), Parent.Parent.Parent.Name,IF(OR(ISPICKVAL(Parent.Parent.Parent.Parent.Account_Type__c, 'Org'),ISBLANK(Parent.Parent.Parent.Parent.Parent.Id)), Parent.Parent.Parent.Parent.Name,Parent.Parent.Parent.Parent.Parent.Name)))))</formula>
        <inlineHelpText>Shows the name of the Ultimate Org when we have the multi-level hierarchy.</inlineHelpText>
        <label>Org Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Org__c</fullName>
        <description>Shows the ID of the first Org found in the multi-level hierarchy.</description>
        <formula>IF( OR( ISPICKVAL(Account_Type__c, 'Org'),ISBLANK(Parent.Id)),Id,IF(OR(ISPICKVAL(Parent.Account_Type__c, 'Org'),ISBLANK(Parent.Parent.Id)),Parent.Id,IF(OR(ISPICKVAL(Parent.Parent.Account_Type__c, 'Org'),ISBLANK(Parent.Parent.Parent.Id)), Parent.Parent.Id,IF(OR(ISPICKVAL(Parent.Parent.Parent.Account_Type__c, 'Org'),ISBLANK(Parent.Parent.Parent.Parent.Id)), Parent.Parent.Parent.Id,IF(OR(ISPICKVAL(Parent.Parent.Parent.Parent.Account_Type__c, 'Org'),ISBLANK(Parent.Parent.Parent.Parent.Parent.Id)), Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Parent.Id)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the ID of the first Org found in the multi-level hierarchy.</inlineHelpText>
        <label>Parent Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_UUID__c</fullName>
        <label>Parent UUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_ID__c</fullName>
        <label>Partner ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_URL__c</fullName>
        <label>Payment URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Previous_Owner_Email__c</fullName>
        <description>Field stores previous Owner email for workflow email alert</description>
        <label>Previous Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primarty_Member_End_Date__c</fullName>
        <formula>Primary_Member__r.End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primarty Member End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Member_Address__c</fullName>
        <label>Primary Member Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member_Alt_Phone__c</fullName>
        <formula>Primary_Member__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Member Alt. Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member_Birthdate__c</fullName>
        <formula>Primary_Member__r.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Member Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Member_City__c</fullName>
        <label>Primary Member City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member_Email__c</fullName>
        <formula>Primary_Member__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member_Initials__c</fullName>
        <formula>LEFT(Primary_Member__r.FirstName ,1)&amp;LEFT(Primary_Member__r.LastName,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Member Initials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member_Keycard_Number__c</fullName>
        <formula>Primary_Member__r.Keycard_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Member Keycard Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member_Phone__c</fullName>
        <formula>Primary_Member__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Member Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member_Start_Date__c</fullName>
        <formula>Primary_Member__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Member Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Member_State__c</fullName>
        <label>Primary Member State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member_Zip__c</fullName>
        <label>Primary Member Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Paperwork will be sent to the primary member on the ACCOUNT</inlineHelpText>
        <label>Main Contact</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Printer_Login__c</fullName>
        <label>Printer Login</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Account_Owner__c</fullName>
        <label>Prior Account Owner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Processing_Stage__c</fullName>
        <label>Processing Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>HQ Market Identified</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROE_Segment__c</fullName>
        <description>Account FTE &gt;0; &lt;50 → “Consumer”
Account FTE &gt;=50; &lt;1000 → “MLB”
Account FTE &gt;=1000 → “Enterprise”</description>
        <formula>IF(AND(Account_FTE__c &gt; 0, Account_FTE__c &lt; 50),'Consumer',
	IF(AND(Account_FTE__c &gt;= 50, Account_FTE__c &lt; 1000),'MLB',
		IF(Account_FTE__c &gt;= 1000,'Enterprise','')))</formula>
        <inlineHelpText>Consumer: FTE Count = 1-49 | MLB:  FTE Count = 50-999 | Enterprise: FTE Count = 1,000+</inlineHelpText>
        <label>ROE Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_Enrich_Unomy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to Re-Enrich the Unomy data.</description>
        <inlineHelpText>Re-Enrichment of Unomy data.</inlineHelpText>
        <label>Re Enrich Unomy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reassignment_On_User_Deactivation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reassignment On User Deactivation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Helper__c</fullName>
        <formula>1</formula>
        <label>Report Helper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment_Detail__c</fullName>
        <description>Account FTE --&gt; Small (0 to 10)
Account FTE --&gt; Medium (11-250)
Account FTE --&gt; Large (251 - 999)
Account FTE --&gt; (999+)</description>
        <formula>IF(AND(Account_FTE__c &gt;= 0 , Account_FTE__c &lt;= 10),'Small', 
IF(AND(Account_FTE__c &gt;= 11 , Account_FTE__c &lt;= 250), 'Medium', 
IF(AND(Account_FTE__c &gt;= 251 , Account_FTE__c &lt;= 999), 'Large', 
'Enterprise' ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Field is used to reference the Record Type for Segment Detail field</description>
        <formula>RecordType.Name</formula>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Current_Desks__c</fullName>
        <description>Total of Active and Future Sold Desks</description>
        <inlineHelpText>Total of Active and Future Sold Desks</inlineHelpText>
        <label>Total Current Desks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Desks_Sold__c</fullName>
        <label>Total Desks Sold</label>
        <summarizedField>Opportunity.Number_of_Desks__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unomy_Acquisitions__c</fullName>
        <label>Unomy Acquisitions</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Alexa_Global_Rank__c</fullName>
        <label>Unomy Alexa Global Rank</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Alexa_US_Rank__c</fullName>
        <label>Unomy Alexa US Rank</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Available_Contacts__c</fullName>
        <label>Unomy Available Contacts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Email__c</fullName>
        <label>Unomy Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unomy Company ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Name__c</fullName>
        <label>Unomy Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Phone__c</fullName>
        <label>Unomy Company Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Size_Max__c</fullName>
        <label>Unomy Company Size Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Size_Min__c</fullName>
        <label>Unomy Company Size Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Size__c</fullName>
        <label>Unomy Company Size</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Stock_Symbol__c</fullName>
        <label>Unomy Company Stock Symbol</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Website__c</fullName>
        <label>Unomy Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Administration__c</fullName>
        <label>Unomy Contacts Job Administration</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Consulting__c</fullName>
        <label>Unomy Contacts Job Consulting</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Creative__c</fullName>
        <label>Unomy Contacts Job Creative</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Engineering__c</fullName>
        <label>Unomy Contacts Job Engineering</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Finance__c</fullName>
        <label>Unomy Contacts Job Finance</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Human_Resources__c</fullName>
        <label>Unomy Contacts Job Human Resources</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_IT__c</fullName>
        <label>Unomy Contacts Job IT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Legal__c</fullName>
        <label>Unomy Contacts Job Legal</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Marketing__c</fullName>
        <label>Unomy Contacts Job Marketing</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Medical__c</fullName>
        <label>Unomy Contacts Job Medical</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Operations__c</fullName>
        <label>Unomy Contacts Job Operations</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Other__c</fullName>
        <label>Unomy Contacts Job Other</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Product__c</fullName>
        <label>Unomy Contacts Job Product</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Sales__c</fullName>
        <label>Unomy Contacts Job Sales</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Support__c</fullName>
        <label>Unomy Contacts Job Support</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Training__c</fullName>
        <label>Unomy Contacts Job Training</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_C_Level__c</fullName>
        <label>Unomy Contacts Mgmt C Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_Directors__c</fullName>
        <label>Unomy Contacts Mgmt Directors</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_Managers__c</fullName>
        <label>Unomy Contacts Mgmt Managers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_Non_Managers__c</fullName>
        <label>Unomy Contacts Mgmt Non Managers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_VP_Level__c</fullName>
        <label>Unomy Contacts Mgmt VP Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Estimated_Revenue_Max__c</fullName>
        <label>Unomy Estimated Revenue Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Estimated_Revenue_Min__c</fullName>
        <label>Unomy Estimated Revenue Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Estimated_Revenue__c</fullName>
        <label>Unomy Estimated Revenue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Facebook_Likes__c</fullName>
        <label>Unomy Facebook Likes</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Founded__c</fullName>
        <label>Unomy Founded</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Industries__c</fullName>
        <label>Unomy Industries</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unomy_Industry__c</fullName>
        <label>Unomy Industry</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unomy_Investments__c</fullName>
        <label>Unomy Investments</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Investors__c</fullName>
        <label>Unomy Investors</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Latest_Round__c</fullName>
        <label>Unomy Latest Round</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unomy_Lease_Details_URL__c</fullName>
        <label>Lease Details - Unomy</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Unomy_Location_Address__c</fullName>
        <label>Unomy Location Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Location_City__c</fullName>
        <label>Unomy Location City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Location_Country__c</fullName>
        <label>Unomy Location Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Location_State__c</fullName>
        <label>Unomy Location State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Metadata__c</fullName>
        <label>Unomy Metadata</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unomy_Override_Request__c</fullName>
        <description>Allows users to request Unomy location update. This sends out email notification when set to "Request Unomy Update". Managed by process: Account - ROE Unomy Override</description>
        <inlineHelpText>If would you like to update the Unomy location information with your user input location information, set this field to "Request Unomy Update". Growth Ops will review your request and initiate the update if approved.</inlineHelpText>
        <label>Unomy Update Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request Unomy Update</fullName>
                </value>
                <value>
                    <fullName>Request Approved</fullName>
                </value>
                <value>
                    <fullName>Request Rejected</fullName>
                </value>
                <value>
                    <fullName>Request Denied</fullName>
                    <isActive>false</isActive>
                    <label>Request Denied</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unomy_Technologies_Used__c</fullName>
        <label>Unomy Technologies Used</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unomy_Total_Funding_Full__c</fullName>
        <label>Unomy Total Funding Full</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Total_Funding__c</fullName>
        <label>Unomy Total Funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Twitter_Followers__c</fullName>
        <label>Unomy Twitter Followers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Updated_DateTime__c</fullName>
        <description>The date/time a record was updated from Unomy</description>
        <label>Unomy Updated DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Unomy_User__c</fullName>
        <label>Unomy User</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Update_HQ_Market_Status__c</fullName>
        <description>This field show the status where the batch is updated record or not.</description>
        <label>Update HQ Market Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Retry Round 1</fullName>
                </value>
                <value>
                    <fullName>Retry Round 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Deactivation_Updated_On__c</fullName>
        <label>User Deactivation Updated On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WW_Sync_Payment_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WW Sync Payment Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WW_Sync_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WW Sync Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WW_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this record was successfully synced with WeWork.com API</inlineHelpText>
        <label>WW Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Won_Opportunities__c</fullName>
        <label>Won Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Workplace_Stats__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workplace Stats</label>
        <referenceTo>Workplace_Stats__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X12_Month_Business__c</fullName>
        <label>12 Month Business Performance</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X4_Digit_Printer_Pin__c</fullName>
        <label>4-Digit Printer Pin #</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__CustomerInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Info</label>
        <referenceTo>JBCXM__CustomerInfo__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>JBCXM_Account_CustInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__LD_EmailDomains__c</fullName>
        <description>Derived Email Domains from contact emails</description>
        <label>LD_EmailDomains</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Has_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting Has Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Last_Marketing_Touch_Date__c</fullName>
        <label>Reporting Last Marketing Touch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Last_Sales_Touch_Date__c</fullName>
        <label>Reporting Last Sales Touch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Recent_Marketing_Touches__c</fullName>
        <label>Reporting Recent Marketing Touches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Target_Account_Number__c</fullName>
        <formula>IF( LeanData__Reporting_Target_Account__c, 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Target Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Target_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting Target Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Total_Leads_and_Contacts__c</fullName>
        <label>Reporting Total Leads and Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Total_Marketing_Touches__c</fullName>
        <label>Reporting Total Marketing Touches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Total_Sales_Touches__c</fullName>
        <label>Reporting Total Sales Touches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Routing_Action__c</fullName>
        <label>Routing Action</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Search__c</fullName>
        <description>LeanData search field</description>
        <label>LeanData Search</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>Account_Management</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Primary_Member__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>ayehi,CSter,jkent</value>
        </filters>
        <label>Account Management</label>
        <sharedTo>
            <roleAndSubordinates>Enterprise_Admin</roleAndSubordinates>
            <roleAndSubordinates>Enterprise_Solutions</roleAndSubordinates>
            <roleAndSubordinates>Enterprise_User</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>